--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Space+Grotesk:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Space+Grotesk:wght@300..700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
   font-family: "Space Grotesk", sans-serif;
 }
 
@@ -15,17 +15,38 @@ body{
   background-size: 100% auto;
   display: grid;
   place-items: center;
-
 }
 
-.dark{
+.dark {
   background-color: hsl(235, 21%, 11%);
   color: white;
 }
 
-.done{
+.done {
   text-decoration: line-through;
+  opacity: 0.5;
 }
 .active {
   color: hsl(220, 98%, 61%);
+}
+.circle{
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid gray ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  aspect-ratio: 1/1;
+}
+.circle:hover{
+  background-color: linear-gradient(90deg, #60a0ee 0%, #7e40e7 100%) border-box;
+  mask: linear-gradient(#df3333 0 0) padding-box, linear-gradient(#753939 0  0);
+}
+.gradient {
+  background: linear-gradient(90deg, #60a0ee 0%, #7e40e7 100%);
+}
+
+.task:hover .delete{
+  display: block;
 }
