--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body {
-  font-family: "Space Grotesk", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .main {
@@ -29,6 +29,8 @@ body {
 .active {
   color: hsl(220, 98%, 61%);
 }
+
+
 .circle{
   width: 24px;
   height: 24px;
